tests/tests/neg/error_messages/extern_specs/invalid_enum.rs
use flux_attrs::*;

#[extern_spec]
enum Option<T> {
    //~^ ERROR invalid extern_spec
    Some(T),
}
